wrap up presentation and code

--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Demos.Web.csproj
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Demos.Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebApplication5</RootNamespace>
-    <AssemblyName>WebApplication5</AssemblyName>
+    <RootNamespace>Demos.Web</RootNamespace>
+    <AssemblyName>Demos.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -220,9 +220,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Customers\Edit.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Customers\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
