--- a/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Web.config
+++ b/Introduction to ASP.NET MVC - Denver Dev Days/Demos/Demos.Web/Web.config
@@ -13,6 +13,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <!--<authentication mode="Forms">
+      <forms loginUrl="~/" />
+    </authentication>-->
   </system.web>
   <system.webServer>
     <handlers>
